<resources>
    <string name="app_name">Event Tracker App</string>
    <string name="image_description">Event Tracker App logo</string>
    <string name="signin_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="user_name">Enter First Name*</string>
    <string name="user_phone_number">Enter Phone Number*</string>
    <string name="user_email">Enter Email Address*</string>
    <string name="user_pass">Enter Password*</string>
    <string name="signup_button">Sign Up</string>
    <string name="additem_activity_title">Add new item</string>
    <string name="item_description_hint">Enter Item Description</string>
    <string name="column_item_description_heading">Description</string>
    <string name="column_item_quantity_heading">Quantity</string>
    <string name="add_vector_description">Add Item</string>
    <string name="del_vector_description">Delete Item</string>
    <string name="row_item_desc_hint">Item Description</string>
    <string name="row_item_qty_hint">Item Qty</string>
    <string name="decrease_vector_description">Decrease Item Quantity</string>
    <string name="increase_vector_description">Increase Item Quantity</string>
    <string name="sms_vector_description">SMS Notification</string>
    <string name="ad_sms_title">App SMS Permission Needed</string>
    <string name="ad_sms_msg">The app SMS feature requires permission to notified for items with zero inventory. You can enable or disable this feature at any time. However, you should allow the device permission request to use this app feature.</string>
    <string name="ad_sms_enable_button">Enable</string>
    <string name="ad_sms_disable_button">Disable</string>
    <string name="add_button_label">ADD</string>
    <string name="sms_button_label">SMS</string>
    <string name="decrease_label_description">Decrease Item by One</string>
    <string name="increase_label_description">Increase Item by One</string>
    <string name="login_activity_title">Login</string>
    <string name="register_activity_title">Register</string>
    <string name="signout_menu_item">Sign Out</string>
    <string name="item_description_label">Item Description</string>
    <string name="item_quantity_label">Item Quantity</string>
    <string name="add_item_button">Add Item</string>
    <string name="cancel_button">Cancel</string>
    <string name="salutation">Welcome, %s!</string>
    <string name="zero">0</string>
    <string name="logged_user">User Email: %s</string>
    <string name="column_item_id_heading">ID</string>
  <string name="scrollview_description">Items List ScrollView</string>
  <string name="column_item_unit_heading">Unit</string>
  <string name="row_item_id_hint">ID</string>
  <string name="row_item_unit_hint">Unit</string>
  <string name="edit_vector_description">Edit Item</string>
    <string name="item_unit_label">Item Unit</string>
  <string name="item_qty_hint">Enter Item Qty</string>
  <string name="item_unit_hint">Enter Item Unit</string>
    <string name="edititem_popup_title">edit item</string>
  <string name="save_button">Save</string>
    <string name="total_items">Total</string>
  <string name="delete_all_items">Delete</string>
  <string name="delete_all_vector_description">Delete All Items</string>
  <string name="ad_delete_dialog_yes_button">Yes</string>
  <string name="ad_delete_dialog_no_button">No</string>
  <string name="ad_delete_title">Delete All Items</string>
  <string name="ad_delete_msg">Are you sure you want to delete all database items?</string>
  <string name="forgot_popup_title">forgot password</string>
  <string name="forgot_hint">Enter Phone Number</string>
  <string name="forgot_password">Forgot Password?</string>
  <string name="get_button">Get</string>

</resources>
