<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/popup_element"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">

  <TextView
    android:id="@+id/textViewResetPassTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/roboto_medium"
    android:gravity="center"
    android:text="@string/edititem_popup_title"
    android:textColor="@color/purple_700"
    android:textSize="34sp"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editTextItemDescriptionPopup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewResetPassTitle"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/roboto_medium"
    android:gravity="center_horizontal"
    android:hint="@string/item_description_hint"
    android:inputType="text"
    android:minHeight="48dp" />

  <EditText
    android:id="@+id/editTextItemQtyPopup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/editTextItemDescriptionPopup"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/roboto_medium"
    android:gravity="center_horizontal"
    android:hint="@string/item_qty_hint"
    android:inputType="number"
    android:minHeight="48dp" />

  <EditText
    android:id="@+id/editTextItemUnitPopup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/editTextItemQtyPopup"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/roboto_medium"
    android:gravity="center_horizontal"
    android:hint="@string/item_unit_hint"
    android:inputType="text"
    android:minHeight="48dp" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/editTextItemUnitPopup"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <Button
      android:id="@+id/editCancelButton"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:layout_marginRight="10dp"
      android:background="@drawable/round_corners_btn"
      android:fontFamily="@font/roboto_medium"
      android:text="@string/cancel_button"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:backgroundTint="@color/teal_700" />

    <Button
      android:id="@+id/editSaveButton"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginLeft="10dp"
      android:background="@drawable/round_corners_btn"
      android:fontFamily="@font/roboto_medium"
      android:text="@string/save_button"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:backgroundTint="@color/purple_700" />

  </LinearLayout>

</RelativeLayout>
