<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/popup_element"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">

  <TextView
    android:id="@+id/textViewResetPassTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/roboto_medium"
    android:gravity="center"
    android:text="@string/forgot_popup_title"
    android:textColor="@color/purple_700"
    android:textSize="34sp"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editTextItemDescriptionPopup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewResetPassTitle"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/roboto_medium"
    android:gravity="center_horizontal"
    android:hint="@string/forgot_hint"
    android:inputType="phone"
    android:textSize="20sp" />

  <TextView
    android:id="@+id/textViewPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/editTextItemDescriptionPopup"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/roboto_medium"
    android:gravity="center_horizontal|center_vertical"
    android:textSize="20sp" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewPassword"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <Button
      android:id="@+id/forgotCancelButton"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:layout_marginRight="10dp"
      android:background="@drawable/round_corners_btn"
      android:fontFamily="@font/roboto_medium"
      android:text="@string/cancel_button"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:backgroundTint="@color/teal_700" />

    <Button
      android:id="@+id/forgotGetButton"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginLeft="10dp"
      android:background="@drawable/round_corners_btn"
      android:fontFamily="@font/roboto_medium"
      android:text="@string/get_button"
      android:textColor="@color/white"
      android:textSize="16sp"
      app:backgroundTint="@color/purple_700" />

  </LinearLayout>

</RelativeLayout>
